--- a/visualisatie/index.html
+++ b/visualisatie/index.html
@@ -10,6 +10,12 @@ form {
 svg {
   font: 10px sans-serif;
 }
+
+rect {
+  stroke: white;
+  stroke-width: 2;
+  stroke-opacity: 0.3;
+}
   </style>
 </head>
 <body>
@@ -26,7 +32,7 @@ svg {
   </div>
   <div id="total">
   </div>
-  <svg class="treemap" id="treemap" width="1000" height="1000">
+  <svg class="treemap" id="treemap" width="800" height="800">
   </svg>
   <script src="d3/d3.js"></script>
   <script>
@@ -63,7 +69,6 @@ var color = d3.scaleOrdinal()
 
 var treemap = d3.treemap()
     .size([width, height])
-    .padding(1)
     .round(true);
 
 function render(year, uo) {
@@ -80,7 +85,7 @@ function render(year, uo) {
     treemap(root
       .eachBefore(function(d) { d.data.id = (d.parent ? d.parent.data.id + "." : "") + d.data.name; })
       .sum(function(d) { return Math.abs(d.value); })
-      .sort(function(a, b) { return b.height - a.height || b.value - a.value; }))
+      .sort(function(a, b) { return b.value - a.value; }))
     .descendants();
   
     var myNode = document.getElementById("treemap");
@@ -104,7 +109,7 @@ function render(year, uo) {
           while (d.depth > 1) d = d.parent; return color(d.data.name);
         }
       });
-    
+
     cell.append("clipPath")
       .attr("id", function(d, i) { return "clip-" + convertToSlug(d.data.id) + i; })
       .append("use")
@@ -138,24 +143,65 @@ function render(year, uo) {
   });
 };
 
-function zoom(d) {
-  var kx = width / (d.x1 - d.x0);
-  var ky = height / (d.y1 - d.y0);
-  x.domain([d.x0, d.x1]);
-  y.domain([d.y0, d.y1]);
+function zoom(new_root) {
+  var kx = width / (new_root.x1 - new_root.x0);
+  var ky = height / (new_root.y1 - new_root.y0);
+  x.domain([new_root.x0, new_root.x1]);
+  y.domain([new_root.y0, new_root.y1]);
 
-  var t = treemap_el.selectAll("g").transition()
-      .attr("transform", function(d) { return "translate(" + x(d.x0) + "," + y(d.y0) + ")"; });
+  var myNode = document.getElementById("treemap");
+  while (myNode.firstChild) {
+    myNode.removeChild(myNode.firstChild);
+  }
+  var cell = treemap_el.selectAll("g")
+      .data(new_root.children)
+      .enter().append("g")
+        .attr("transform", function(d) { return "translate(" + x(d.x0) + "," + y(d.y0) + ")"; })
+        .on("click", function(d) { return zoom(d.children ? d : root); });
 
-  t.select("rect")
-      .attr("width", function(d) { return kx * (d.x1 - d.x0) - 1; })
-      .attr("height", function(d) { return ky * (d.y1 - d.y0) - 1; });
+  cell.append("rect")
+      .attr("id", function(d) { return convertToSlug(d.data.id); })
+      .attr("width", function(d) { return kx * (d.x1 - d.x0); })
+      .attr("height", function(d) { return ky * (d.y1 - d.y0); })
+      .attr("fill", function(d) {
+        if (d.data.value < 0) {
+          return 'red';
+        } else {
+          while (d.depth > 1) d = d.parent; return color(d.data.name);
+        }
+      });
 
-  t.select("text")
-      .attr("x", function(d) { return kx * (d.x1 - d.x0) / 2; })
-      .attr("y", function(d) { return ky * (d.y1 - d.y0) / 2; });
+  cell.append("clipPath")
+    .attr("id", function(d, i) { return "clip-" + convertToSlug(d.data.id) + i; })
+    .append("use")
+    .attr("xlink:href", function(d, i) { return "#" + convertToSlug(d.data.id); });
 
-  node = d;
+  cell.append("text")
+    .attr("clip-path", function(d, i) { return "url(#clip-" + convertToSlug(d.data.id) + i + ")"; })
+    .selectAll("tspan")
+      .data(function(d) {
+        var val = format(d.value);
+        if (d.data.value < 0) {
+          val = format(-d.value);
+        }
+        var txt = d.data.name + " " + val;
+        return txt.split(/ /g);
+      })
+    .enter().append("tspan")
+      .attr("x", 4)
+      .attr("y", function(d, i) { return 13 + i * 10; })
+      .text(function(d) { return d; });
+
+  cell.append("title")
+    .text(function(d) {
+      if (d.data.value < 0) {
+        return d.data.id + "\n" + format(-d.value);
+      } else {
+        return d.data.id + "\n" + format(d.value);
+      }
+    })
+
+  node = new_root;
   d3.event.stopPropagation();
 }
 
