--- a/visualisatie/index.html
+++ b/visualisatie/index.html
@@ -251,14 +251,16 @@ function render_stacked_bar(new_root, uo, years, stbar_data = []) {
         })
         .attr("id", function(d) { return d.key; })
       .selectAll("rect")
-      // Add the name/key to each stacked bar chart element in order to
-      // add a title with the name and value
+      // Remove element from array if it contains NaN and add the
+      // name/key to each stacked bar chart element in order to add a
+      // title with the name and value
       .data(function(d) {
-        // Remove element from array if it contains NaN
         var cleand = d.filter(function(i) {
           return !isNaN(i[0]) && !isNaN(i[1])
         });
-        cleand.map(function(i) {i.push(cleand.key)}); return cleand;
+        cleand.map(function(i) {i.push(d.key)});
+        console.log(cleand);
+        return cleand;
       })
       .enter().append("rect")
         .attr("x", function(d) { return x(d.data.year); })
