--- a/visualisatie/index.html
+++ b/visualisatie/index.html
@@ -73,11 +73,10 @@ var color_map = {
   "De Staten Generaal": {"background": "#f092cd", "dark": "#480A31", "bright":"#F8C9E7", "text": "black"},
   "Overige Hoge Colleges van Staat": {"background": "#b4b4b4", "dark": "#292929", "bright":"#E0E0E0", "text": "black"},
   "Algemene Zaken": {"background": "#a90061", "dark": "#52002E", "bright":"#FFC2E4", "text": "white"},
-  "Algemene Zaken": {"background": "#a90061", "dark": "#52002E", "bright":"#FFC2E4", "text": "white"},
-  "Kabinet van de Koning": {"background": "#cccccc", "dark": "#292929", "bright":"#E0E0E0", "text": "black"},
+  "Kabinet van de Koning": {"background": "#f3f3f3", "dark": "#292929", "bright":"#E0E0E0", "text": "black"},
   "Commissie van Toezicht betreffende de Inlichtingen- en Veiligheidsdienst": {"background": "#e6e6e6", "dark": "#292929", "bright":"#E0E0E0", "text": "black"},
   "Koninkrijksrelaties": {"background": "#d52b1e", "dark": "#470E0A", "bright":"#F7CDC9", "text": "white"},
-  "Nationale Schuld": {"background": "#f3f3f3", "dark": "#292929", "bright":"#E0E0E0", "text": "black"},
+  "Nationale Schuld": {"background": "#cccccc", "dark": "#292929", "bright":"#E0E0E0", "text": "black"},
   "Financiën": {"background": "#007bc7", "dark": "#003252", "bright":"#C2E8FF", "text": "white"},
   "Deltafonds": {"background": "#94710a", "dark": "#4C3B05", "bright":"#FBEEC6", "text": "white"},
   "Buitenlandse Zaken": {"background": "#39870c", "dark": "#204B07", "bright":"#DAFAC7", "text": "white"},
